--- a/Desktop/Fetch Lab (CodeGrade)/.gitignore
+++ b/Desktop/Fetch Lab (CodeGrade)/.gitignore
@@ -1,29 +1,40 @@
-# Node modules and dependencies
-node_modules/
-
-# Environment variables
-.env
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Mac system files
+# macOS system files
 .DS_Store
+.Trash/
+.localized
 
-# Temporary files
-*.tmp
-*.log
+# Node & dependencies
+node_modules/
+npm-debug.log*
 
-# Editor settings
+# Environment and user config
+.env
 .vscode/
 .idea/
+*.log
 
-# OS-specific
-Thumbs.db
+# Python, NVM, SSH, etc.
+.pyenv/
+.nvm/
+.ssh/
+.gk/
+.zsh_sessions/
+.zsh_history
+.zprofile
 
-# Build and cache
-dist/
-build/
-.cache/
+# Other personal/system directories
+Documents/
+Downloads/
+Music/
+Movies/
+Pictures/
+Public/
+Library/
+Applications/
+
+# Screenshots and images
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
