--- a/Desktop/Fetch Lab (CodeGrade)/package.json
+++ b/Desktop/Fetch Lab (CodeGrade)/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "fetch-lab",
+  "version": "1.0.0",
+  "description": "A simple lab that fetches Game of Thrones books from an API and displays them",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "node-fetch": "^3.3.2"
-  }
+    "node-fetch": "^3.4.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
