--- a/Desktop/Fetch Lab (CodeGrade)/.gitignore
+++ b/Desktop/Fetch Lab (CodeGrade)/.gitignore
@@ -1,9 +1,24 @@
-# Ignore node_modules
-node_modules/
-
 # Ignore macOS system files
 .DS_Store
 
-# Ignore parent directories
+# Ignore Node modules
+node_modules/
+
+# Ignore VS Code settings
+.vscode/
+
+# Ignore environment and shell files
+.zsh_history
+.zsh_sessions/
+.zprofile
+.npm/
+.nvm/
+.pyenv/
+.ssh/
+.gk/
+.Trash/
+
+# Ignore everything outside this project
 ../
 ../../
+
